@@ -2015,3 +2015,9 @@ Sudo 1.6.9p9 released.
      in addition to the existing start_tls support.
 
 Sudo 1.6.9p10 released.
+
+637) Fixed a compilation problem on SCO related to how they
+     store the high resolution timestamps in struct stat.
+
+638) The URI specifier can now be used in ldap.conf even when
+     the LDAP SDK doesn't support ldap_initialize().
